--- a/src/screens/Services.css
+++ b/src/screens/Services.css
@@ -27,6 +27,12 @@
   margin-bottom: 15px;
 }
 
+.icon-circle i {
+  font-size: 1.5rem;
+  color: white; /* make sure it’s visible */
+}
+
+
 .blue {
   background-color: #3b82f6;
 }
